@@ -1,5 +1,8 @@
 DATE       AUTHOR       CHANGE
 ---------- -----------  -------------------------------------------------------
+2002-09-07 nonchocoboy  Entities now have a UID associated with them. The
+                        AbstractEntity class was added to manage UIDs in a
+                        common way for most entity implementations.
 2002-09-07 nonchocoboy  Added UIDManager for automatic unique ID management.
 2002-07-29 nonchocoboy  Added collision notifcation event framework.
 2002-07-28 nonchocoboy  Integrated basic collision detection into the game.
